force-app/main/default/objects/EYI_APF__c/EYI_APF__c.object-meta.xml
<CustomObject>
    <label>APF</label>
    <nameField>
        <label>APF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>