force-app/main/default/objects/EYI_APF__c/fields/EYI_APF_Document_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Document_Submission_Date__c</fullName>
    <label>APF Document Submission Date</label>
    <type>Date</type>
</CustomField>