force-app/main/default/objects/EYI_APF__c/fields/EYI_APF_Expiry_Date_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Expiry_Date_2__c</fullName>
    <label>APF Expiry Date 2</label>
    <type>Date</type>
</CustomField>