force-app/main/default/objects/EYI_APF__c/fields/EYI_APF_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Number__c</fullName>
    <label>APF Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>