force-app/main/default/objects/EYI_APF__c/fields/EYI_APF_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Received_Date__c</fullName>
    <label>APF Received Date</label>
    <type>Date</type>
</CustomField>