force-app/main/default/objects/EYI_APF__c/fields/EYI_APF_Renewal_Date_3__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Renewal_Date_3__c</fullName>
    <label>APF Renewal Date 3</label>
    <type>Date</type>
</CustomField>