force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_Name1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>EYI_Bank_Details__c</referenceTo>
    <relationshipLabel>APF</relationshipLabel>
    <relationshipName>APF</relationshipName>
    <type>Lookup</type>
</CustomField>