force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_SPOC_Designation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_SPOC_Designation__c</fullName>
    <label>Bank SPOC Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>