force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_SPOC_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_SPOC_Email__c</fullName>
    <label>Bank SPOC Email</label>
    <type>Email</type>
</CustomField>