force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_SPOC_Name1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_SPOC_Name1__c</fullName>
    <formula>EYI_Bank_Name1__r.EYI_Banker_Name__c</formula>
    <label>Bank SPOC Name</label>
    <type>Text</type>
</CustomField>