force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_SPOC_Number1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_SPOC_Number1__c</fullName>
    <formula>EYI_Bank_Name1__r.EYI_Banker_Mobile__c</formula>
    <label>Bank SPOC Number</label>
    <type>Text</type>
</CustomField>