force-app/main/default/objects/EYI_APF__c/fields/EYI_Bank_SPOC_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_SPOC_Number__c</fullName>
    <label>Bank SPOC Number</label>
    <type>Phone</type>
</CustomField>