force-app/main/default/objects/EYI_APF__c/fields/EYI_Banker_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Email__c</fullName>
    <description>It will update Banker Escalation Email from Bank Details.</description>
    <label>Banker Escalation Email</label>
    <type>Email</type>
</CustomField>