force-app/main/default/objects/EYI_APF__c/fields/EYI_Banker_Escalation_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Mobile__c</fullName>
    <description>It will update Banker Escalation Mobile from Bank Details.</description>
    <label>Banker Escalation Mobile</label>
    <type>Phone</type>
</CustomField>