force-app/main/default/objects/EYI_APF__c/fields/EYI_Banker_Escalation_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Name__c</fullName>
    <description>It will update Banker Escalation Name from Bank details</description>
    <label>Banker Escalation Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>