force-app/main/default/objects/EYI_APF__c/fields/EYI_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Expiry_Date__c</fullName>
    <label>APF Expiry Date 1</label>
    <type>Date</type>
</CustomField>