force-app/main/default/objects/EYI_APF__c/fields/EYI_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remark__c</fullName>
    <label>Remark</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>