force-app/main/default/objects/EYI_APF__c/fields/EYI_RERA_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Project_Name__c</fullName>
    <label>RERA Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>