force-app/main/default/objects/EYI_APF__c/fields/EYI_RERA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Start_Date__c</fullName>
    <label>RERA Start Date</label>
    <type>Date</type>
</CustomField>