force-app/main/default/objects/EYI_APF__c/fields/EYI_RERANumber__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERANumber__c</fullName>
    <label>RERA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>