force-app/main/default/objects/EYI_APF__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <label>APF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents yet to be Submitted</fullName>
                <default>true</default>
                <label>Documents yet to be Submitted</label>
            </value>
            <value>
                <fullName>Documents Submitted</fullName>
            </value>
            <value>
                <fullName>APF in Progress</fullName>
            </value>
            <value>
                <fullName>APF Completed</fullName>
                <label>APF Approved</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>