force-app/main/default/objects/EYI_APF__c/fields/EYI_Temporary_APF_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Temporary_APF_Number__c</fullName>
    <label>Temporary APF Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>