force-app/main/default/objects/EYI_APF__c/validationRules/APF_Approved_date_should_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>APF_Approved_date_should_not_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(    EYI_APF_Approval_Date__c ) ,NOT( ISNULL(EYI_APF_Approval_Date__c   ))
,EYI_APF_Approval_Date__c    &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_APF_Approval_Date__c</errorDisplayField>
    <errorMessage>Please enter valid APF Approval Date.</errorMessage>
</ValidationRule>