force-app/main/default/objects/EYI_APF__c/validationRules/APF_Received_date_should_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>APF_Received_date_should_not_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(     EYI_APF_Received_Date__c  ) ,NOT( ISNULL(EYI_APF_Received_Date__c     ))
,EYI_APF_Received_Date__c      &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_APF_Received_Date__c</errorDisplayField>
    <errorMessage>Please enter valid APF Received Date.</errorMessage>
</ValidationRule>