force-app/main/default/objects/EYI_APF__c/validationRules/APFCoordinationInitiatedDate_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>APFCoordinationInitiatedDate_not_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(  EYI_APF_Coordination_Initiated_Date__c  ) ,NOT( ISNULL(EYI_APF_Coordination_Initiated_Date__c  ))
,EYI_APF_Coordination_Initiated_Date__c   &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_APF_Coordination_Initiated_Date__c</errorDisplayField>
    <errorMessage>Please enter valid APF Coordination Initiated Date.</errorMessage>
</ValidationRule>