force-app/main/default/objects/EYI_APF__c/validationRules/APFDocSubmissiondateshould_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>APFDocSubmissiondateshould_not_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(   EYI_APF_Document_Submission_Date__c ) ,NOT( ISNULL(EYI_APF_Document_Submission_Date__c  ))
,EYI_APF_Document_Submission_Date__c   &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_APF_Document_Submission_Date__c</errorDisplayField>
    <errorMessage>Please enter valid APF Document Submission Date.</errorMessage>
</ValidationRule>